# bloxide

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint-and-test.yml
bloxide-tokio/: Cargo.toml
bloxide-tokio/examples/demo/: main.rs
bloxide-tokio/src/: lib.rs  runtime.rs
core/: Cargo.toml
core/src/: components.rs  lib.rs  macros.rs  merge.rs  messaging.rs  state_machine.rs
core/src/blox/: mod.rs
core/src/blox/demo_counter/: Counter.drawio  components.rs  ext_state.rs  messaging.rs  mod.rs
core/src/blox/demo_counter/states/: counting.rs  error.rs  finished.rs  idle.rs  mod.rs  not_started.rs  uninit.rs
core/src/blox/demo_root/: components.rs  ext_state.rs  messaging.rs
core/src/blox/demo_root/states/: counting.rs  error.rs  finished.rs  idle.rs  mod.rs  starting.rs  uninit.rs
core/src/blox/supervisor/: components.rs  ext_state.rs  messaging.rs  mod.rs
core/src/blox/supervisor/states/: error.rs  mod.rs  running.rs  uninit.rs
examples/counter/: CounterActor.drawio  main.rs
examples/counter/actors/: counter.rs  mod.rs
examples/counter/actors/root/: actor.rs  ext_state.rs  messaging.rs  mod.rs  state.rs
examples/demo/: main.rs
examples/demo/blox/counter/: components.rs  ext_state.rs  messaging.rs  runtime.rs
examples/demo/blox/counter/states/: counting.rs  error.rs  finished.rs  idle.rs  mod.rs  not_started.rs  uninit.rs
examples/demo/blox/root/: components.rs  ext_state.rs  messaging.rs  mod.rs  runtime.rs
examples/demo/blox/root/states/: counting.rs  error.rs  finished.rs  idle.rs  mod.rs  starting.rs  uninit.rs
src/: lib.rs  macros.rs
src/core/: actor.rs  components.rs  messaging.rs  mod.rs  state_machine.rs
src/runtime/: embassy.rs  mod.rs  tokio.rs
src/supervisor/: components.rs  ext_state.rs  messaging.rs  mod.rs  runtime.rs  supervisor.rs
src/supervisor/states/: error.rs  mod.rs  running.rs  uninit.rs
