# Copyright 2025 Bloxide, all rights reserved

[package]
name = "bloxide-tokio"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt", "sync", "time", "full"] }
bloxide-core = { path = "../core" }
log = "0.4.25"
tokio-stream = "0.1.17"

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[dev-dependencies]
env_logger = { version = "0.11.6" }
