# Copyright 2025 Bloxide, all rights reserved

[package]
name = "bloxide-core"
version.workspace = true
edition.workspace = true

[features]


# Create a feature group for runtimes

runtime-embassy = ["embassy-sync", "embassy-executor"]

[dependencies]
# Logging - configured via runtime features
log = { version = "0.4.22", default-features = false }

# Optional dependencies for tokio runtime
env_logger = { version = "0.11.6", optional = true }

# Optional dependencies for embassy runtime
embassy-sync = { version = "0.6.1", optional = true }
embassy-executor = { version = "0.6.3", optional = true }
embassy-futures = "0.1.1"

futures = { version = "0.3.31", optional = true }
rand = { version = "0.8.5", optional = true }
hashbrown = "0.15.2"
serde = { version = "1.0.217", features = ["derive"] }
futures-core = "0.3.31"
futures-util = "0.3.31"

[package.metadata.cargo-all-features]
skip_feature_sets = [
    # Skip testing no features at all
    [],
]

[lib]
name = "bloxide_core"
path = "src/lib.rs"

